# scream

./: .gitmodules  mkdocs.yml
cime_config/: config_grids.xml
cime_config/machines/: config_machines.xml  config_pio.xml
cime_config/machines/cmake_macros/: crayclang-scream_crusher-scream-gpu.cmake  my-workstation.cmake
components/cam/src/chemistry/utils/: mo_util.F90  prescribed_volcaero.F90  read_volc_radiation_data.F90
components/cam/src/physics/cam/: physpkg.F90
components/eam/bld/config_files/: horiz_grid.xml
components/eam/bld/namelist_files/: namelist_defaults_eam.xml  namelist_definition.xml
components/eam/src/physics/cam/: nudging.F90  physpkg.F90
components/eamxx/cime_config/: namelist_defaults_scream.xml
components/eamxx/cmake/: CompareNCFilesFamily.cmake
components/eamxx/data/: rough_topo_tests_output.yaml
components/eamxx/data/create_newcase_for_topo_sims/: create_newcase_rough_topo_default_settings_np4.sh  create_newcase_rough_topo_new_settings_np4.sh  create_newcase_rough_topo_new_settings_pg2.sh  create_newcase_smooth_topo_default_settings_np4.sh  create_newcase_test_one_month.sh  create_newcase_test_two_step.sh
components/eamxx/data/gll_output_files/: create_newcase.sh  output_with_gll.yaml
components/eamxx/src/control/: atmosphere_driver.cpp
components/eamxx/src/dynamics/homme/: atmosphere_dynamics.cpp  atmosphere_dynamics.hpp  physics_dynamics_remapper.hpp
components/eamxx/src/mct_coupling/: scream_cxx_f90_interface.cpp
components/eamxx/src/share/field/: field_tag.hpp
components/eamxx/src/share/io/: scorpio_input.cpp  scorpio_output.cpp  scream_io_utils.cpp  scream_io_utils.hpp  scream_output_manager.cpp  scream_output_manager.hpp  (+2 more)
components/eamxx/tests/: CMakeLists.txt
components/elm/bld/namelist_files/: namelist_defaults.xml  namelist_definition.xml
components/scream/: CMakeLists.txt  mkdocs.yml
components/scream/cmake/: ScreamOptions.cmake  ScreamSettings.cmake
components/scream/cmake/tpls/: Scorpio.cmake
components/scream/docs/: main.tex
components/scream/docs/control/: driver_doc.tex
components/scream/docs/mkdocs/: README.md  index.md
components/scream/docs/mkdocs/dev/: ad.md  data_structures.md  processes.md  testing.md
components/scream/docs/mkdocs/dev/concepts/: ad.md  fm.md  io.md  remap.md
components/scream/docs/user_and_dev_guides/: index.md
components/scream/docs/user_and_dev_guides/dev/: perf_blocks.md
components/scream/docs/user_and_dev_guides/dev/concepts/: atm_proc.md  field.md  grid.md  sc.md
components/scream/docs/user_and_dev_guides/mkdocs/: build.md  overview.md
components/scream/docs/user_and_dev_guides/user/: spa.md
components/scream/ekat/: CMakeLists.txt
components/scream/ekat/cmake/: EkatSetCompilerFlags.cmake
components/scream/scripts/: cf-xml-to-yaml  query-cf-database.cpp  test_all_scream.py
components/scream/src/control/: CMakeLists.txt  atmosphere_driver.cpp  atmosphere_driver.hpp
components/scream/src/diagnostics/tests/: atm_density_test.cpp  dry_static_energy_test.cpp  exner_test.cpp  potential_temperature_test.cpp  sea_level_pressure_test.cpp  vertical_layer_interface_test.cpp  vertical_layer_midpoint_test.cpp  vertical_layer_thickness_test.cpp  virtual_temperature_test.cpp
components/scream/src/dynamics/: CMakeLists.txt
components/scream/src/dynamics/homme/: CMakeLists.txt
components/scream/src/dynamics/homme/interface/: homme_params_mod.F90
components/scream/src/physics/: CMakeLists.txt
components/scream/src/physics/cld_fraction/: CMakeLists.txt
components/scream/src/physics/haero/: CMakeLists.txt  atmosphere_aerosol.cpp  atmosphere_aerosol.hpp  haero_inputs_initializer.cpp  haero_inputs_initializer.hpp
components/scream/src/physics/p3/: CMakeLists.txt  p3_back_to_cell_average_impl.hpp  p3_check_values_impl.hpp  p3_cldliq_imm_freezing_impl.hpp  p3_iso_c.f90  p3_main_impl_part2.hpp
components/scream/src/physics/p3/tests/: p3_autoconversion_unit_tests.cpp  p3_calc_rime_density_unit_tests.cpp  p3_cldliq_imm_freezing_unit_tests.cpp  p3_cloud_rain_acc_unit_tests.cpp  p3_droplet_self_coll_unit_tests.cpp  p3_dsd2_unit_tests.cpp  p3_evaporate_rain_unit_tests.cpp  p3_ice_collection_unit_tests.cpp  p3_ice_deposition_sublimation_tests.cpp  p3_ice_melting_unit_tests.cpp  p3_ice_nucleation_unit_tests.cpp  p3_ice_relaxation_timescale_unit_tests.cpp  p3_ice_sed_unit_tests.cpp  p3_ice_tables_unit_tests.cpp  p3_incloud_mixingratios_unit_tests.cpp  p3_rain_imm_freezing_unit_tests.cpp  p3_rain_sed_unit_tests.cpp  p3_test_setup.cpp  p3_unit_tests.cpp
components/scream/src/physics/rrtmgp/: CMakeLists.txt
components/scream/src/physics/shoc/: CMakeLists.txt  shoc_diag_second_moments_impl.hpp  shoc_f90.cpp  shoc_functions_f90.hpp  shoc_ic_cases.cpp  shoc_iso_c.f90
components/scream/src/physics/spa/: CMakeLists.txt  atmosphere_prescribed_aerosol.cpp  spa_functions_impl.hpp
components/scream/src/share/: CMakeLists.txt
components/scream/src/share/atm_process/: CMakeLists.txt  atmosphere_process.cpp  atmosphere_process.hpp  atmosphere_process_group.cpp
components/scream/src/share/atm_process/tests/: CMakeLists.txt
components/scream/src/share/field/: CMakeLists.txt  field_tag.hpp
components/scream/src/share/field/tests/: CMakeLists.txt  field_tests.cpp
components/scream/src/share/grid/: CMakeLists.txt
components/scream/src/share/grid/tests/: CMakeLists.txt
components/scream/src/share/io/: CMakeLists.txt  scorpio_input.cpp  scorpio_input.hpp  scorpio_output.cpp  scorpio_output.hpp  scream_io_utils.hpp  scream_output_manager.cpp  scream_scorpio_interface.cpp  scream_scorpio_interface.hpp  scream_scorpio_interface_c2f.F90  scream_scorpio_interface_details.hpp  shr_pio_mod_c2f.F90
components/scream/src/share/io/tests/: CMakeLists.txt  io.cpp  io_se_grid.cpp  output_restart.cpp  scorpio_interface_tests.cpp
components/scream/src/share/tests/: CMakeLists.txt  atm_process_tests.cpp  common_physics_functions_tests.cpp  field_mgr.cpp
components/scream/src/share/util/: scream_common_physics_functions_impl.hpp
docs/dev/: architecture.md  style_guide.md
(+25 files in other folders)
